--- a/styles/destinations.css
+++ b/styles/destinations.css
@@ -4,11 +4,11 @@ main {
 
 .background-video {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
   overflow: hidden;
-  top: 0;
-  left: 0;
   object-fit: cover;
   z-index: -100;
 }
@@ -133,3 +133,92 @@ main {
   object-fit: cover; /* Maintain aspect ratio */
   text-decoration: none;
 }
+@media screen and (max-width: 767px) {
+  .content-1 h1 {
+      font-size: 5rem;
+      font-weight: 750;
+      line-height: 4rem;
+  }
+  .oblong-box {
+      width: 50%;
+      border: 2px solid;
+      border-radius: 25px;
+      display: flex;
+      align-items: center;
+      background-color: #fff;
+      padding: 0 1rem;
+      margin-left: 0%;
+  }
+  .gallery-container {
+      display: flex;
+      gap: 10px;
+      margin-top: 80%;
+      margin-left: -53%;
+  }
+  footer {
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0.3rem;
+      padding: 0.7rem;
+      font-size: 0.7rem;
+      margin-top: 45%;
+  }
+  }
+  @media screen and (max-width: 600px) {
+    header {
+        position: sticky;
+        width: 100%;
+        height: 6rem;
+        background: linear-gradient(to right, #202020, #424242, #737373);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1.5rem;
+        top: 0;
+        padding: 1rem;
+        z-index: 100;
+        font-size: .5rem;
+    }
+    .content-1 h1 {
+        font-size: 5rem;
+        font-weight: 750;
+        line-height: 4rem;
+        margin-top: -20%;
+    }
+    .oblong-box {
+        width: 50%;
+        border: 2px solid;
+        border-radius: 25px;
+        display: flex;
+        align-items: center;
+        background-color: #fff;
+        padding: 0 1rem;
+        margin-left: -68%;
+        margin-top: 60%;
+    }
+    .gallery-container {
+        display: flex;
+        gap: 40px;
+        margin-top: 30%;
+        margin-left: -75%;
+    }
+    .gallery-item {
+        text-align: center;
+        width: 100px;
+        height: 130px;
+    }
+    footer {
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0.3rem;
+        padding: 0.7rem;
+        font-size: 0.7rem;
+        margin-top: 45%;
+    }
+  }
